# cxx-async

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml
cxx-async/: Cargo.toml  build.rs
cxx-async/include/: cxx_async.h  cxx_async_cppcoro.h  cxx_async_folly.h  cxx_async_libunifex.h  cxx_async_waker.h
cxx-async/include/rust/: cxx_async.h  cxx_async_cppcoro.h  cxx_async_folly.h
cxx-async/src/: cxx_async.cpp  execlet.rs  lib.rs
etc/: cppcoro.pc  libunifex.pc
examples/common/include/: example.h
examples/cppcoro/: Cargo.toml  build.rs
examples/cppcoro/include/: cppcoro_example.h
examples/cppcoro/src/: cppcoro_example.cpp  main.rs
examples/folly/: Cargo.toml  build.rs
examples/folly/include/: folly_example.h
examples/folly/src/: folly_example.cpp  main.rs
examples/libunifex/: Cargo.toml  build.rs
examples/libunifex/include/: libunifex_example.h
examples/libunifex/src/: libunifex_example.cpp  main.rs
include/: cppcoro_example.h  cxx_async.h  cxx_async_waker.h  example.h
macro/: Cargo.toml
macro/src/: lib.rs
src/: cppcoro_example.cpp  cxx_async.cpp  main.rs
