[package]
name = "cxx-async2"
version = "0.1.0"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "0.3"
once_cell = "1"
paste = "1"
pin-utils = "0.1"

[dependencies.cxx]
version = "1"
features = ["c++20"]

[dependencies.futures]
version = "0.3"
features = ["thread-pool"]

[dependencies.link-cplusplus]
version = "1"
features = ["libc++"]

[build-dependencies]
cxx-build = "1"
pkg-config = "0.3"
