[package]
name = "cxx-async"
version = "0.1.0"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
edition = "2018"
links = "cxx-async"

[lib]
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
async-recursion = "0.3"
once_cell = "1"
pin-utils = "0.1"

[dependencies.cxx]
version = "1"
features = ["c++20"]

[dependencies.cxx-async-macro]
path = "../macro"

[dependencies.futures]
version = "0.3"
features = ["thread-pool"]

[dependencies.link-cplusplus]
version = "1"
features = ["libc++"]

[build-dependencies]
cxx-build = "1"
pkg-config = "0.3"
