[package]
name = "cxx-async-macro"
version = "0.1.2"
edition = "2021"
description = "The macro for simple interoperability between C++ coroutines and asynchronous Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pcwalton/cxx-async"
keywords = ["ffi", "cpp", "async"]
homepage = "https://github.com/pcwalton/cxx-async"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2" }
