[package]
name = "cxx-async-example-folly"
version = "0.1.0"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
edition = "2018"

[dependencies]
async-recursion = "1"
once_cell = "1"

# CXX related dependencies
cxx = { version = "1", features = ["c++20"] }
cxx-async = { path = "../../cxx-async" }

# Async related dependencies
futures = { version = "0.3", features = ["thread-pool"] }

[build-dependencies]
cxx-build = "1"
find-folly = "0.1"
